unpackaged/main/default/objects/Counseling_Form__c/Counseling_Form__c.object-meta.xml
<CustomObject>
    <label>Counseling Form</label>
    <nameField>
        <label>College Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counseling Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>