unpackaged/main/default/objects/Counseling_Form__c/fields/Accepted_by_Non_Partner__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by_Non_Partner__c</fullName>
    <label>Accepted by Non-Partner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>