unpackaged/main/default/objects/Counseling_Form__c/fields/ACT_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Date__c</fullName>
    <label>ACT Date</label>
    <type>Date</type>
</CustomField>