unpackaged/main/default/objects/Counseling_Form__c/fields/ACT_English_Score__c.field-meta.xml
<CustomField>
    <fullName>ACT_English_Score__c</fullName>
    <label>ACT English Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>