unpackaged/main/default/objects/Counseling_Form__c/fields/Activities_and_Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Activities_and_Hobbies__c</fullName>
    <label>Activities and Hobbies</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>