unpackaged/main/default/objects/Counseling_Form__c/fields/AP_Courses__c.field-meta.xml
<CustomField>
    <fullName>AP_Courses__c</fullName>
    <label>AP Courses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>