unpackaged/main/default/objects/Counseling_Form__c/fields/College_and_Career_Goals__c.field-meta.xml
<CustomField>
    <fullName>College_and_Career_Goals__c</fullName>
    <label>College and Career Goals</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>