unpackaged/main/default/objects/Counseling_Form__c/fields/College_Planning_Process__c.field-meta.xml
<CustomField>
    <fullName>College_Planning_Process__c</fullName>
    <label>College Planning Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confident in my decision: I know where I will be attending college after my Verto semester(s). I&#39;ve been accepted to the institution and feel confident in my choice.</fullName>
            </value>
            <value>
                <fullName>Open to options: I have a few institutions in mind, or have received some college acceptances, but I am open to exploring my college options further.</fullName>
            </value>
            <value>
                <fullName>Need guidance: I don&#39;t know where to start or what to look for in potential colleges or universities.</fullName>
            </value>
            <value>
                <fullName>I don&#39;t plan to attend college after my Verto semester(s).</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>