unpackaged/main/default/objects/Counseling_Form__c/fields/Committed_School__c.field-meta.xml
<CustomField>
    <fullName>Committed_School__c</fullName>
    <label>Committed School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>