unpackaged/main/default/objects/Counseling_Form__c/fields/Counseling__c.field-meta.xml
<CustomField>
    <fullName>Counseling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counseling</label>
    <referenceTo>Counseling__c</referenceTo>
    <relationshipName>College_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>