unpackaged/main/default/objects/Counseling_Form__c/fields/Current_County__c.field-meta.xml
<CustomField>
    <fullName>Current_County__c</fullName>
    <label>Current County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>