unpackaged/main/default/objects/Counseling_Form__c/fields/Dual_Enrollment_Courses_and_Grades__c.field-meta.xml
<CustomField>
    <fullName>Dual_Enrollment_Courses_and_Grades__c</fullName>
    <label>Dual Enrollment Courses and Grades</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>