unpackaged/main/default/objects/Counseling_Form__c/fields/Dual_Enrollment_Institution_c__c.field-meta.xml
<CustomField>
    <fullName>Dual_Enrollment_Institution_c__c</fullName>
    <label>Dual Enrollment Institution</label>
    <type>TextArea</type>
</CustomField>