unpackaged/main/default/objects/Counseling_Form__c/fields/Early_Middle_College__c.field-meta.xml
<CustomField>
    <fullName>Early_Middle_College__c</fullName>
    <label>Early/Middle College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>