unpackaged/main/default/objects/Counseling_Form__c/fields/Enough_Info__c.field-meta.xml
<CustomField>
    <fullName>Enough_Info__c</fullName>
    <label>Enough Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>