unpackaged/main/default/objects/Counseling_Form__c/fields/Explain_GPA__c.field-meta.xml
<CustomField>
    <fullName>Explain_GPA__c</fullName>
    <label>Explain (GPA)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>