unpackaged/main/default/objects/Counseling_Form__c/fields/Fifth_Choice__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fifth Choice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counseling Forms (Fifth Choice)</relationshipLabel>
    <relationshipName>Counseling_Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>