unpackaged/main/default/objects/Counseling_Form__c/fields/Fifth_Choice_Why__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Choice_Why__c</fullName>
    <label>Fifth Choice Why</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>