unpackaged/main/default/objects/Counseling_Form__c/fields/First_Choice__c.field-meta.xml
<CustomField>
    <fullName>First_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Choice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counseling Forms (First Choice)</relationshipLabel>
    <relationshipName>Counseling_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>