unpackaged/main/default/objects/Counseling_Form__c/fields/First_Choice_Why__c.field-meta.xml
<CustomField>
    <fullName>First_Choice_Why__c</fullName>
    <label>First Choice Why</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>