unpackaged/main/default/objects/Counseling_Form__c/fields/Fourth_Choice__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fourth Choice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counseling Forms (Fourth Choice)</relationshipLabel>
    <relationshipName>Counseling_Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>