unpackaged/main/default/objects/Counseling_Form__c/fields/Fourth_Choice_Why__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Choice_Why__c</fullName>
    <label>Fourth Choice Why</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>