unpackaged/main/default/objects/Counseling_Form__c/fields/High_School_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>High_School_Start_Date__c</fullName>
    <label>High School Start Date</label>
    <type>Date</type>
</CustomField>