unpackaged/main/default/objects/Counseling_Form__c/fields/IB_Courses__c.field-meta.xml
<CustomField>
    <fullName>IB_Courses__c</fullName>
    <label>IB Courses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>