unpackaged/main/default/objects/Counseling_Form__c/fields/Important_Factors_in_College_Selection__c.field-meta.xml
<CustomField>
    <fullName>Important_Factors_in_College_Selection__c</fullName>
    <label>Important Factors in College Selection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>Availability of intended major(s)</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Public vs. Private</fullName>
            </value>
            <value>
                <fullName>Ranking</fullName>
            </value>
            <value>
                <fullName>Resources &amp; Support available</fullName>
            </value>
            <value>
                <fullName>Size (small or large institution)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>