unpackaged/main/default/objects/Counseling_Form__c/fields/Include_Test_Scores__c.field-meta.xml
<CustomField>
    <fullName>Include_Test_Scores__c</fullName>
    <label>Include Test Scores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>