unpackaged/main/default/objects/Counseling_Form__c/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts and Humanities</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Health and Medicine</fullName>
            </value>
            <value>
                <fullName>Multi-/Interdisciplinary Studies</fullName>
            </value>
            <value>
                <fullName>Public and Social Sciences</fullName>
            </value>
            <value>
                <fullName>Science, Math, and Technology</fullName>
            </value>
            <value>
                <fullName>Social Sciences and Education</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>