unpackaged/main/default/objects/Counseling_Form__c/fields/Is_GPA_Accurate_Reflection__c.field-meta.xml
<CustomField>
    <fullName>Is_GPA_Accurate_Reflection__c</fullName>
    <label>Is GPA Accurate Reflection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>