unpackaged/main/default/objects/Counseling_Form__c/fields/Length_of_Residency__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Residency__c</fullName>
    <label>Length of Residency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>