unpackaged/main/default/objects/Counseling_Form__c/fields/Major_1__c.field-meta.xml
<CustomField>
    <fullName>Major_1__c</fullName>
    <label>Major 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>College_Major_Options</valueSetName>
    </valueSet>
</CustomField>