unpackaged/main/default/objects/Counseling_Form__c/fields/Non_Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Non_Partner_2__c</fullName>
    <label>Non-Partner 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>