unpackaged/main/default/objects/Counseling_Form__c/fields/Non_Partner_Institutions__c.field-meta.xml
<CustomField>
    <fullName>Non_Partner_Institutions__c</fullName>
    <label>Non-Partner Institutions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>