unpackaged/main/default/objects/Counseling_Form__c/fields/Other_Interests__c.field-meta.xml
<CustomField>
    <fullName>Other_Interests__c</fullName>
    <label>Other Interests</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>