unpackaged/main/default/objects/Counseling_Form__c/fields/Parent_Guardian_State_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_State_of_Residence__c</fullName>
    <label>Parent/Guardian State of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Province_Region</valueSetName>
    </valueSet>
</CustomField>