unpackaged/main/default/objects/Counseling_Form__c/fields/Post_High_School_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Post_High_School_Concerns__c</fullName>
    <label>Post High School Concerns</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>