unpackaged/main/default/objects/Counseling_Form__c/fields/SAT_Date__c.field-meta.xml
<CustomField>
    <fullName>SAT_Date__c</fullName>
    <label>SAT Date</label>
    <type>Date</type>
</CustomField>