unpackaged/main/default/objects/Counseling_Form__c/fields/SAT_Math__c.field-meta.xml
<CustomField>
    <fullName>SAT_Math__c</fullName>
    <label>SAT Math</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>