unpackaged/main/default/objects/Counseling_Form__c/fields/SAT_Reading_Writing__c.field-meta.xml
<CustomField>
    <fullName>SAT_Reading_Writing__c</fullName>
    <label>SAT Reading/Writing</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>