unpackaged/main/default/objects/Counseling_Form__c/fields/Second_Choice__c.field-meta.xml
<CustomField>
    <fullName>Second_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Choice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counseling Forms (Second Choice)</relationshipLabel>
    <relationshipName>Counseling_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>