unpackaged/main/default/objects/Counseling_Form__c/fields/Second_Choice_Why__c.field-meta.xml
<CustomField>
    <fullName>Second_Choice_Why__c</fullName>
    <label>Second Choice Why</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>