unpackaged/main/default/objects/Counseling_Form__c/fields/Student_Plans_to_Use_Fafsa__c.field-meta.xml
<CustomField>
    <fullName>Student_Plans_to_Use_Fafsa__c</fullName>
    <label>Student Plans to Use Fafsa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>