unpackaged/main/default/objects/Counseling_Form__c/fields/Submit_Applications__c.field-meta.xml
<CustomField>
    <fullName>Submit_Applications__c</fullName>
    <label>Submit Applications?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, please send my application to these schools.</fullName>
            </value>
            <value>
                <fullName>Maybe - I would like my list reviewed by a college counselor before confirming.</fullName>
            </value>
            <value>
                <fullName>Maybe - I would like additional feedback and guidance on my selections before confirming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>