unpackaged/main/default/objects/Counseling_Form__c/fields/Submitted_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Deposit__c</fullName>
    <label>Submitted Deposit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>