unpackaged/main/default/objects/Counseling_Form__c/fields/Taken_ACT__c.field-meta.xml
<CustomField>
    <fullName>Taken_ACT__c</fullName>
    <label>Taken ACT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>