unpackaged/main/default/objects/Counseling_Form__c/fields/Third_Choice__c.field-meta.xml
<CustomField>
    <fullName>Third_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Choice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Counseling Forms (Third Choice)</relationshipLabel>
    <relationshipName>Counseling_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>