unpackaged/main/default/objects/Counseling_Form__c/fields/Third_Choice_Why__c.field-meta.xml
<CustomField>
    <fullName>Third_Choice_Why__c</fullName>
    <label>Third Choice Why</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>