unpackaged/main/default/objects/Counseling_Form__c/fields/Waive_College_Counseling__c.field-meta.xml
<CustomField>
    <fullName>Waive_College_Counseling__c</fullName>
    <label>Waive College Counseling?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>