unpackaged/main/default/objects/Counseling_Form__c/fields/Which_AP_Courses__c.field-meta.xml
<CustomField>
    <fullName>Which_AP_Courses__c</fullName>
    <label>Which AP Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AP_Courses_List</valueSetName>
    </valueSet>
</CustomField>