unpackaged/main/default/objects/Counseling_Form__c/fields/Which_IB_Course__c.field-meta.xml
<CustomField>
    <fullName>Which_IB_Course__c</fullName>
    <label>Which IB Courses</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>