unpackaged/main/default/objects/Counseling_Form__c/fields/X2_Years_of_World_Language__c.field-meta.xml
<CustomField>
    <fullName>X2_Years_of_World_Language__c</fullName>
    <label>2 Years of World Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>