unpackaged/main/default/objects/Counseling_Form__c/fields/X3_years_of_Sceince__c.field-meta.xml
<CustomField>
    <fullName>X3_years_of_Sceince__c</fullName>
    <label>3 years of Science</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>