unpackaged/main/default/objects/Counseling_Form__c/fields/X4_years_of_Math__c.field-meta.xml
<CustomField>
    <fullName>X4_years_of_Math__c</fullName>
    <label>4 years of Math</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>