unpackaged/main/default/objects/Counseling_Form__c/recordTypes/Commitment_Form.recordType-meta.xml
<RecordType>
    <fullName>Commitment_Form</fullName>
    <active>true</active>
    <description>Default Record Type for the Commitment Form</description>
    <label>Commitment Form</label>
</RecordType>