unpackaged/main/default/objects/Counseling_Form__c/recordTypes/Partner_Selection_Form.recordType-meta.xml
<RecordType>
    <fullName>Partner_Selection_Form</fullName>
    <active>true</active>
    <description>Default Record Type for the Partner Selection Form</description>
    <label>Partner Selection Form</label>
</RecordType>